--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @layer base {
   html,
   body {
-    @apply bg-gray-900;
+    @apply bg-gray-900 min-h-screen;
     font-family: Inter, 'Noto Sans TC', 'sans-serif';
     color: white;
   }
